Fixed a couple of CSS issues with specific sites (Twitter, for onw). Also now smoother scrolling when not visible. Bumped to 1.15.

--- a/invisiblestatusbar.safariextension/invisiblestatusbar.css
+++ b/invisiblestatusbar.safariextension/invisiblestatusbar.css
@@ -15,6 +15,7 @@ isb {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	-webkit-transition: opacity 250ms;
+	text-align: left;
 }
 isb[side=right] {
 	left: auto;
@@ -58,7 +59,7 @@ isb[theme=safari] {
 	font: 10px/13px "lucida grande";
 	background: -webkit-gradient(linear, left top, left bottom, from(#bbb), to(#aaa));
 	border-top: 1px solid rgba(255, 255, 255, 0.5);
-	outline: 1px solid rgba(0, 0, 0, 0.5);
+	outline: 1px solid rgba(0, 0, 0, 0.5) !important;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }
 
